src/test/deca/syntax/invalid/int_bool.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    int boolean x;
}